[package]
edition = "2021"
name = "postoffice"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7", features = ["derive"]}
color-backtrace = "0.6.1"
cursive = "0.20"
log = "0.4.20"
log4rs = "1.2.0"
rlua = "0.19.7"
serde = {version = "1.0.192", features = ["derive"]}
